--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -72,11 +72,12 @@
         android:layout_height="@dimen/button_size"
         android:layout_marginEnd="@dimen/grid_margin_side"
         android:layout_marginBottom="24dp"
+        android:drawableStart="@drawable/ic_search_white_24dp"
         android:inputType="textAutoComplete"
         android:background="@drawable/search_button"
         android:contentDescription="@string/button_search_description"
-        android:paddingStart="25dp"
-        android:paddingEnd="25dp"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/white"
         android:textCursorDrawable="@null"
