--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="small_vertical_margin">4dp</dimen>
     <dimen name="medium_vertical_margin">8dp</dimen>
     <dimen name="button_size">48dp</dimen>
+    <dimen name="search_button_offset_open">13dp</dimen>
+    <dimen name="search_button_offset_closed">12dp</dimen>
 </resources>
