--- a/app/src/main/res/layout/compound_list_item.xml
+++ b/app/src/main/res/layout/compound_list_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/compound_list_item_name_text_view"
         style="@style/FinalDilutionListTextPrimary"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/compound_list_item_height"
         android:layout_marginEnd="5dp"
         android:gravity="center"
         app:layout_constrainedWidth="true"
@@ -27,7 +27,7 @@
         android:id="@+id/compound_list_item_mass_text_view"
         style="@style/FinalDilutionListTextSecondary"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/compound_list_item_height"
         android:gravity="center"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
