--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="button_size">48dp</dimen>
     <dimen name="search_button_offset_open">13dp</dimen>
     <dimen name="search_button_offset_closed">12dp</dimen>
+    <dimen name="compound_list_item_height">60dp</dimen>
 </resources>
