--- a/app/src/main/res/layout/checklist.xml
+++ b/app/src/main/res/layout/checklist.xml
@@ -4,19 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
-    android:minHeight="48dp"
-    android:layout_height="48dp">
+    android:minHeight="52dp"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/checklist_component"
         style="@style/FinalDilutionListTextPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="start"
-        android:maxLines="1"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
+        android:gravity="start"
+        android:maxLines="2"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/checklist_extraTextView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/checklist_amount"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,9 +35,9 @@
         android:gravity="end"
         android:maxLines="1"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/checklist_component"
         app:layout_constraintEnd_toStartOf="@+id/checklist_checkBox1"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/checklist_component"
         tools:text="60.15 ml" />
 
     <CheckBox
@@ -45,9 +47,9 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/checklist_amount"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/checklist_amount" />
 
     <TextView
         android:id="@+id/checklist_extraTextView"
