--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -96,12 +96,12 @@
                     android:gravity="end"
                     android:inputType="numberDecimal"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    app:layout_constraintEnd_toStartOf="@+id/textView"
+                    app:layout_constraintEnd_toStartOf="@+id/beakerVolumeEditTextUnit"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/beakerVolumeEditTextUnit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/mililiters"
