--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="bluish_gray">#80d6d0</color>
     <color name="background_accent">#D2EEFA</color>
     <color name="background_accent_saturated">#f8f9fa</color>
+    <color name="background_error">#fad0d0</color>
     <color name="blue">#86D7F5</color>
     <color name="dark_blue">#548699</color>
     <color name="text_default">#000000</color>
