--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -4,8 +4,8 @@
     android:id="@+id/new_compound_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="@dimen/bottom_sheet_elevation"
     android:clickable="true"
+    android:elevation="@dimen/bottom_sheet_elevation"
     android:focusable="true"
     android:orientation="vertical">
 
@@ -37,138 +37,144 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compoundsListHeader" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/all_texts_wrapped"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/grey1"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_compound_title">
 
-        <RadioGroup
-            android:id="@+id/radio_group_state_of_matter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/form_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/grey1">
 
-            <RadioButton
-                android:id="@+id/radioButtonSolid"
-                style="@style/FinalDilutionRadioButton"
+            <RadioGroup
+                android:id="@+id/radio_group_state_of_matter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="@string/state_of_matter_solid" />
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toTopOf="@+id/form_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed">
 
-            <RadioButton
-                android:id="@+id/radioButtonLiquid"
-                style="@style/FinalDilutionRadioButton"
-                android:layout_width="wrap_content"
+                <RadioButton
+                    android:id="@+id/radioButtonSolid"
+                    style="@style/FinalDilutionRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/state_of_matter_solid" />
+
+                <RadioButton
+                    android:id="@+id/radioButtonLiquid"
+                    style="@style/FinalDilutionRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/state_of_matter_liquid" />
+
+            </RadioGroup>
+
+            <include
+                android:id="@+id/form_name"
+                layout="@layout/form_input_field"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/state_of_matter_liquid" />
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                android:layout_marginBottom="@dimen/small_vertical_margin"
+                app:layout_constraintBottom_toTopOf="@+id/form_molar_mass"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/radio_group_state_of_matter" />
 
-        </RadioGroup>
+            <include
+                android:id="@+id/form_molar_mass"
+                layout="@layout/form_input_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                app:layout_constraintBottom_toTopOf="@+id/form_expand_advanced"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/form_name" />
 
-        <include
-            android:id="@+id/form_name"
-            layout="@layout/form_input_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            android:layout_marginBottom="@dimen/small_vertical_margin"
-            app:layout_constraintBottom_toTopOf="@+id/form_molar_mass"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radio_group_state_of_matter" />
+            <ImageButton
+                android:id="@+id/form_expand_advanced"
+                android:layout_width="@dimen/button_size"
+                android:layout_height="@dimen/button_size"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                android:adjustViewBounds="true"
+                android:background="@color/transparent"
+                android:contentDescription="@string/advanced_options"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_expand_more_black_24dp"
+                android:tint="@color/cyan"
+                app:layout_constraintBottom_toTopOf="@+id/form_trivial_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/form_molar_mass" />
 
-        <include
-            android:id="@+id/form_molar_mass"
-            layout="@layout/form_input_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            app:layout_constraintBottom_toTopOf="@+id/form_expand_advanced"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/form_name" />
+            <include
+                android:id="@+id/form_trivial_name"
+                layout="@layout/form_input_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                android:layout_marginBottom="@dimen/small_vertical_margin"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/form_formula"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/form_expand_advanced" />
 
-        <ImageButton
-            android:id="@+id/form_expand_advanced"
-            android:layout_width="@dimen/button_size"
-            android:layout_height="@dimen/button_size"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            android:adjustViewBounds="true"
-            android:background="@color/transparent"
-            android:contentDescription="@string/advanced_options"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_expand_more_black_24dp"
-            android:tint="@color/cyan"
-            app:layout_constraintBottom_toTopOf="@+id/form_trivial_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/form_molar_mass" />
+            <include
+                android:id="@+id/form_formula"
+                layout="@layout/form_input_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                android:layout_marginBottom="@dimen/medium_vertical_margin"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/button_new_compound_cancel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/form_trivial_name" />
 
-        <include
-            android:id="@+id/form_trivial_name"
-            layout="@layout/form_input_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            android:layout_marginBottom="@dimen/small_vertical_margin"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/form_formula"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/form_expand_advanced" />
+            <ImageButton
+                android:id="@+id/button_new_compound_done"
+                style="@style/FinalDilutionButton"
+                android:layout_marginEnd="@dimen/grid_margin_side"
+                android:contentDescription="@string/navigation_proceed"
+                android:src="@drawable/ic_check_black_24dp"
+                android:tint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/button_new_compound_cancel" />
 
-        <include
-            android:id="@+id/form_formula"
-            layout="@layout/form_input_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            android:layout_marginBottom="@dimen/medium_vertical_margin"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/button_new_compound_cancel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/form_trivial_name" />
+            <ImageButton
+                android:id="@+id/button_new_compound_cancel"
+                style="@style/FinalDilutionButton"
+                android:layout_marginStart="@dimen/grid_margin_side"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="@dimen/grid_margin_side"
+                android:contentDescription="@string/navigation_back"
+                android:src="@drawable/ic_arrow_back_black_24dp"
+                android:tint="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageButton
-            android:id="@+id/button_new_compound_done"
-            style="@style/FinalDilutionButton"
-            android:layout_marginEnd="@dimen/grid_margin_side"
-            android:contentDescription="@string/navigation_proceed"
-            android:src="@drawable/ic_check_black_24dp"
-            android:tint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/button_new_compound_cancel" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ImageButton
-            android:id="@+id/button_new_compound_cancel"
-            style="@style/FinalDilutionButton"
-            android:layout_marginStart="@dimen/grid_margin_side"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="@dimen/grid_margin_side"
-            android:contentDescription="@string/navigation_back"
-            android:src="@drawable/ic_arrow_back_black_24dp"
-            android:tint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
