--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -104,7 +104,7 @@
                 android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
-                android:text="@string/milimol" />
+                android:text="@string/millimol" />
 
             <RadioButton
                 android:id="@+id/desiredMgMlConcButton"
@@ -242,7 +242,7 @@
                 android:layout_marginEnd="@dimen/concentrationButtonsHorizontalSpace"
                 android:button="@null"
                 android:gravity="center"
-                android:text="@string/milimol"
+                android:text="@string/millimol"
                 android:visibility="invisible"
                 tools:visibility="visible" />
 
